scripts/monitoring/kube-prometheus/grafana-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: example.com
    http:
      paths:
      - path: "/monitoring/grafana/(.*)"
        backend:
          service:
            name: grafana
            port:
              name: http
        pathType: ImplementationSpecific
