scripts/monitoring/kube-prometheus/prometheus-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: example.com
    http:
      paths:
      - path: "/monitoring/(.*)"
        backend:
          service:
            name: prometheus-k8s
            port:
              name: web
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - example.com
    secretName: prometheus-secret
